# masters-thesis

./: .gitattributes  .gitignore  README.md  build-rust.sh  flake.nix  index.html  notes.md  package.json  pnpm-lock.yaml  rust.sh  tsconfig.json  vite.config.ts
.github/workflows/: gh-pages.yaml
public/: hack-performance-api.js
rust/: Cargo.toml  LICENSE_MIT  README.md
rust/src/: lib.rs  utils.rs
rust/src/bench/: .canvas.rs.rustfmt  bigint.rs  canvas.rs  dom.rs  hashes.rs  loops.rs  mod.rs  recurrency.rs  string.rs
rust/tests/: web.rs
src/: consts.ts  js.ts  main.ts  rust  tests.ts
