[package]
name = "rust"
version = "0.1.0"
authors = ["Kasper Seweryn <github@wvffle.net>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
serde = { version = "1.0.200", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
base64-simd = { version = "0.8.0", features = ["alloc", "std"] }
lazyrand = "0.1.12"
embedded-graphics = "0.8.1"
sha256-rs = "1.0.2"
hex = "0.4.3"
crabcrypt = "0.1.1"
rust-argon2 = "2.1.0"

[dependencies.web-sys]
version = "0.3.69"
features = ["Document", "Window", "Node", "Element", "HtmlCollection", "Performance", "CanvasRenderingContext2d", "HtmlCanvasElement", "ImageData"]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3
lto = true

# Tell `rustc` to optimize for fast code.
# opt-level = "z"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

# Tell wasm-pack to add --keep-debug
wasm-bindgen = { dwarf-debug-info = true }

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ['--enable-simd']

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['--enable-simd']

[target.wasm32.features]
simd = ["simd128"]
